<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    android:label="nav_graph"
    app:startDestination="@id/launchFragment">

    <fragment
        android:id="@+id/launchFragment"
        android:name="com.udacity.political.preparedness.launch.LaunchFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_launch">
        <action
            android:id="@+id/to_electionsFragment"
            app:destination="@id/electionsFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/to_representativeFragment"
            app:destination="@id/representativeFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/representativeFragment"
        android:name="com.udacity.political.preparedness.representative.RepresentativeFragment"
        android:label="@string/find_my_representative"
        tools:layout="@layout/fragment_representative" />

    <fragment
        android:id="@+id/electionsFragment"
        android:name="com.udacity.political.preparedness.election.ElectionsFragment"
        android:label="@string/elections"
        tools:layout="@layout/fragment_election">
        <action
            android:id="@+id/to_voterInfoFragment"
            app:destination="@id/voterInfoFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/voterInfoFragment"
        android:name="com.udacity.political.preparedness.election.VoterInfoFragment"
        android:label="@string/election_placeholder"
        tools:layout="@layout/fragment_voter_info">
        <argument
            android:name="election"
            app:argType="com.udacity.political.preparedness.network.models.Election" />
    </fragment>

</navigation>
