<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.udacity.political.preparedness.util.DateFormatter" />

        <variable
            name="viewModel"
            type="com.udacity.political.preparedness.election.VoterInfoViewModel" />

        <variable
            name="election"
            type="com.udacity.political.preparedness.network.models.Election" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.udacity.political.preparedness.election.VoterInfoFragment">

        <TextView
            android:id="@+id/election_date"
            style="@style/TextAppearance.Header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorTitle"
            android:gravity="center"
            android:padding="@dimen/default_padding"
            android:text="@{DateFormatter.formatDate(election.electionDay)}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/date_placeholder" />


        <androidx.constraintlayout.widget.Group
            android:id="@+id/election_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="state_header,state_locations,state_ballot"
            app:visibleIf="@{viewModel.hasElectionInfo}" />

        <TextView
            android:id="@+id/state_header"
            style="@style/TextAppearance.Header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_regular"
            android:layout_marginTop="@dimen/spacing_medium"
            android:text="@string/election_information"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/election_date" />

        <TextView
            android:id="@+id/state_locations"
            style="@style/TextAppearance.Link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            android:onClick="@{() -> viewModel.onVotingLocationClicked()}"
            android:text="@string/voting_information"
            app:layout_constraintStart_toStartOf="@id/state_header"
            app:layout_constraintTop_toBottomOf="@id/state_header" />

        <TextView
            android:id="@+id/state_ballot"
            style="@style/TextAppearance.Link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_very_small"
            android:onClick="@{() -> viewModel.onBallotInformationClicked()}"
            android:text="@string/ballot_information"
            app:layout_constraintStart_toStartOf="@id/state_header"
            app:layout_constraintTop_toBottomOf="@id/state_locations" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/address_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="state_correspondence_header,address"
            app:visibleIf="@{viewModel.hasMailingAddress}" />

        <TextView
            android:id="@+id/state_correspondence_header"
            style="@style/TextAppearance.Header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:text="@string/mailing_address"
            app:layout_constraintStart_toStartOf="@id/state_header"
            app:layout_constraintTop_toBottomOf="@id/state_ballot" />

        <TextView
            android:id="@+id/address"
            style="@style/TextAppearance.Description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            android:text="@{viewModel.mailingAddress}"
            android:textSize="@dimen/text_size_extra"
            app:layout_constraintStart_toStartOf="@id/state_header"
            app:layout_constraintTop_toBottomOf="@id/state_correspondence_header"
            tools:text="@string/address" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/follow_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_medium"
            android:layout_marginBottom="@dimen/spacing_regular"
            android:onClick="@{() -> viewModel.onElectionFollowingChanged()}"
            android:text="@{viewModel.buttonText}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/follow_election" />

        <ProgressBar
            android:id="@+id/status_loading_wheel"
            android:layout_width="@dimen/progress_bar_size"
            android:layout_height="@dimen/progress_bar_size"
            android:indeterminate="true"
            android:indeterminateDrawable="@drawable/loading_animation"
            android:visibility="gone"
            app:apiStatus="@{viewModel.voterInfoApiStatus}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
